--- a/src/ft/mod/mfg/form/DFormJob.form
+++ b/src/ft/mod/mfg/form/DFormJob.form
@@ -735,7 +735,7 @@
                 <Property name="rows" type="int" value="1"/>
               </Layout>
               <SubComponents>
-                <Container class="javax.swing.JPanel" name="jpReqment">
+                <Container class="javax.swing.JPanel" name="jpReqments">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
@@ -746,7 +746,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
                 </Container>
-                <Container class="javax.swing.JPanel" name="jpConsump">
+                <Container class="javax.swing.JPanel" name="jpConsumps">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
@@ -790,7 +790,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyConsumpItemType">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[240, 23]"/>
+                                  <Dimension value="[250, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -824,7 +824,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyConsumpItem">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[240, 23]"/>
+                                  <Dimension value="[250, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -866,7 +866,7 @@
                               <Properties>
                                 <Property name="toolTipText" type="java.lang.String" value="Masa"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[110, 23]"/>
+                                  <Dimension value="[125, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -896,9 +896,9 @@
                             </Component>
                             <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolConsumpRework">
                               <Properties>
-                                <Property name="text" type="java.lang.String" value="Re-trab."/>
+                                <Property name="text" type="java.lang.String" value="Re-trabajo"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[70, 23]"/>
+                                  <Dimension value="[82, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -941,7 +941,7 @@
                     </Container>
                   </SubComponents>
                 </Container>
-                <Container class="javax.swing.JPanel" name="jpMfgProd">
+                <Container class="javax.swing.JPanel" name="jpMfgProds">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
@@ -985,7 +985,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyMfgProdItemType">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[240, 23]"/>
+                                  <Dimension value="[250, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -1009,7 +1009,7 @@
                             <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyMfgProdItem">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[240, 23]"/>
+                                  <Dimension value="[250, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -1041,7 +1041,7 @@
                               <Properties>
                                 <Property name="toolTipText" type="java.lang.String" value="Masa"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[110, 23]"/>
+                                  <Dimension value="[125, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -1057,7 +1057,7 @@
                             <Component class="javax.swing.JLabel" name="jLabel1">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[240, 23]"/>
+                                  <Dimension value="[252, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -1133,7 +1133,7 @@
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Tests de calidad:"/>
+                        <TitledBorder title="Resultados de tests de calidad:"/>
                       </Border>
                     </Property>
                   </Properties>
@@ -1162,7 +1162,7 @@
                             <Property name="verticalGap" type="int" value="0"/>
                           </Layout>
                           <SubComponents>
-                            <Component class="javax.swing.JLabel" name="jlTest">
+                            <Component class="javax.swing.JLabel" name="jlTestApp">
                               <Properties>
                                 <Property name="text" type="java.lang.String" value="Test calidad:*"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -1170,10 +1170,10 @@
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyTest">
+                            <Component class="sba.lib.gui.bean.DBeanFieldKey" name="moKeyTestApp">
                               <Properties>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                                  <Dimension value="[200, 23]"/>
+                                  <Dimension value="[250, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -1186,17 +1186,15 @@
                             <Property name="verticalGap" type="int" value="0"/>
                           </Layout>
                           <SubComponents>
-                            <Component class="javax.swing.JLabel" name="jlTestAppDate">
+                            <Component class="javax.swing.JLabel" name="jlTestAppResult">
                               <Properties>
-                                <Property name="text" type="java.lang.String" value="Fecha:*"/>
+                                <Property name="text" type="java.lang.String" value="Resultado:"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                   <Dimension value="[75, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="sba.lib.gui.bean.DBeanFieldDate" name="moDateTestAppDate">
-                            </Component>
-                            <Component class="javax.swing.JTextField" name="jtfTest">
+                            <Component class="javax.swing.JTextField" name="jtfTestAppResult">
                               <Properties>
                                 <Property name="editable" type="boolean" value="false"/>
                                 <Property name="toolTipText" type="java.lang.String" value="Tests aplicados"/>
@@ -1206,7 +1204,7 @@
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JButton" name="jbTestAppAdd">
+                            <Component class="javax.swing.JButton" name="jbTestAppResultAdd">
                               <Properties>
                                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                                   <Image iconType="3" name="/sba/lib/img/cmd_std_add.gif"/>
@@ -1217,7 +1215,7 @@
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JButton" name="jbTestAppClear">
+                            <Component class="javax.swing.JButton" name="jbTestAppResultClear">
                               <Properties>
                                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                                   <Image iconType="3" name="/sba/lib/img/cmd_std_clear.gif"/>
@@ -1234,11 +1232,11 @@
                     </Container>
                   </SubComponents>
                 </Container>
-                <Container class="javax.swing.JPanel" name="jpTestAppsResultVariables">
+                <Container class="javax.swing.JPanel" name="jpTestAppResults">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                        <TitledBorder title="Resultados de tests de calidad:"/>
+                        <TitledBorder title="Variables de resultados de tests de calidad:"/>
                       </Border>
                     </Property>
                   </Properties>
@@ -1267,7 +1265,7 @@
                             <Property name="verticalGap" type="int" value="0"/>
                           </Layout>
                           <SubComponents>
-                            <Component class="javax.swing.JLabel" name="jlTestApp">
+                            <Component class="javax.swing.JLabel" name="jlTestAppResultTest">
                               <Properties>
                                 <Property name="text" type="java.lang.String" value="Test calidad:"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -1275,7 +1273,7 @@
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JTextField" name="jtfTestApp">
+                            <Component class="javax.swing.JTextField" name="jtfTestAppResultTest">
                               <Properties>
                                 <Property name="editable" type="boolean" value="false"/>
                                 <Property name="focusable" type="boolean" value="false"/>
@@ -1293,15 +1291,15 @@
                             <Property name="verticalGap" type="int" value="0"/>
                           </Layout>
                           <SubComponents>
-                            <Component class="javax.swing.JLabel" name="jlTestAppResults">
+                            <Component class="javax.swing.JLabel" name="jlTestAppResultResults">
                               <Properties>
-                                <Property name="text" type="java.lang.String" value="Resultados:"/>
+                                <Property name="text" type="java.lang.String" value="Resultado:"/>
                                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                                   <Dimension value="[75, 23]"/>
                                 </Property>
                               </Properties>
                             </Component>
-                            <Component class="javax.swing.JTextField" name="jtfTestAppResults">
+                            <Component class="javax.swing.JTextField" name="jtfTestAppResultResults">
                               <Properties>
                                 <Property name="editable" type="boolean" value="false"/>
                                 <Property name="focusable" type="boolean" value="false"/>
