--- a/src/ft/mod/cfg/form/DFormBizPartner.form
+++ b/src/ft/mod/cfg/form/DFormBizPartner.form
@@ -265,7 +265,7 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlAddress1">
                           <Properties>
-                            <Property name="text" type="java.lang.String" value="Calle:"/>
+                            <Property name="text" type="java.lang.String" value="Calle y n&#xfa;mero:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
                             </Property>
