--- a/src/ft/mod/cfg/form/DFormFamily.form
+++ b/src/ft/mod/cfg/form/DFormFamily.form
@@ -112,11 +112,6 @@
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanFieldText" name="moTextCode">
-                  <Properties>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[50, 23]"/>
-                    </Property>
-                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
@@ -160,11 +155,6 @@
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanFieldText" name="moTextLotCode">
-                  <Properties>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[50, 23]"/>
-                    </Property>
-                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
@@ -201,7 +191,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jlMassUnit">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Masa unitaria:"/>
+                    <Property name="text" type="java.lang.String" value="Masa unit.:"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 23]"/>
                     </Property>
