--- a/src/ft/mod/cfg/form/DFormItem.form
+++ b/src/ft/mod/cfg/form/DFormItem.form
@@ -155,11 +155,6 @@
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanFieldText" name="moTextLotCode">
-                  <Properties>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[50, 23]"/>
-                    </Property>
-                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
@@ -220,7 +215,7 @@
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="jlMassUnit">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Masa unitaria:*"/>
+                    <Property name="text" type="java.lang.String" value="Masa unit.:*"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[100, 23]"/>
                     </Property>
@@ -239,7 +234,7 @@
               <SubComponents>
                 <Component class="sba.lib.gui.bean.DBeanFieldBoolean" name="moBoolBrix">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Aplican &#xb0;Bx:"/>
+                    <Property name="text" type="java.lang.String" value="Aplican &#xb0;Bx:*"/>
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompBrix">
