--- a/src/ft/mod/stk/form/DFormWsd.form
+++ b/src/ft/mod/stk/form/DFormWsd.form
@@ -465,6 +465,9 @@
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanCompoundFieldCurrency" name="moCurAmount">
+                  <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
@@ -484,6 +487,9 @@
                   </Properties>
                 </Component>
                 <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompMass">
+                  <Properties>
+                    <Property name="editable" type="boolean" value="false"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
@@ -553,7 +559,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jlRowAmountUnit">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Valor unitario:*"/>
+                    <Property name="text" type="java.lang.String" value="Valor unit.:*"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[140, 23]"/>
                     </Property>
