--- a/src/ft/mod/mfg/form/DFormFormula.form
+++ b/src/ft/mod/mfg/form/DFormFormula.form
@@ -142,6 +142,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlFormItem">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="66" green="cc" red="ff" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Producto:*"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
@@ -166,6 +169,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlFormUnit">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="66" green="cc" red="ff" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Unidad medida:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
@@ -192,6 +198,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlFormPresent">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="66" green="cc" red="ff" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Presentaci&#xf3;n:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
@@ -218,6 +227,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jlFormReference">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="66" green="cc" red="ff" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Referencia:"/>
                         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                           <Dimension value="[100, 23]"/>
@@ -264,6 +276,9 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlItemQuantity">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="66" green="cc" red="ff" type="rgb"/>
+                            </Property>
                             <Property name="text" type="java.lang.String" value="Cantidad prod.:*"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
@@ -283,6 +298,9 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlItemMassUnit">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="66" green="cc" red="ff" type="rgb"/>
+                            </Property>
                             <Property name="text" type="java.lang.String" value="Masa unit. prod.:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
@@ -305,6 +323,9 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlItemMass">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="66" green="cc" red="ff" type="rgb"/>
+                            </Property>
                             <Property name="text" type="java.lang.String" value="Masa prod.:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
@@ -327,6 +348,9 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlItemBrix">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="66" green="cc" red="ff" type="rgb"/>
+                            </Property>
                             <Property name="text" type="java.lang.String" value="&#xb0;Bx prod.:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
@@ -349,6 +373,9 @@
                       <SubComponents>
                         <Component class="javax.swing.JLabel" name="jlItemMassSolid">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="66" green="cc" red="ff" type="rgb"/>
+                            </Property>
                             <Property name="text" type="java.lang.String" value="Masa s&#xf3;lida prod.:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[100, 23]"/>
@@ -394,28 +421,6 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Container class="javax.swing.JPanel" name="jPanel25">
-
-                      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
-                        <Property name="alignment" type="int" value="0"/>
-                        <Property name="verticalGap" type="int" value="0"/>
-                      </Layout>
-                      <SubComponents>
-                        <Component class="javax.swing.JLabel" name="jlFormMassSolid">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="Masa s&#xf3;lida f&#xf3;rm.:"/>
-                            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[100, 23]"/>
-                            </Property>
-                          </Properties>
-                        </Component>
-                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompFormMassSolid">
-                          <Properties>
-                            <Property name="editable" type="boolean" value="false"/>
-                          </Properties>
-                        </Component>
-                      </SubComponents>
-                    </Container>
                     <Container class="javax.swing.JPanel" name="jPanel13">
 
                       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
@@ -438,6 +443,28 @@
                         </Component>
                       </SubComponents>
                     </Container>
+                    <Container class="javax.swing.JPanel" name="jPanel25">
+
+                      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
+                        <Property name="alignment" type="int" value="0"/>
+                        <Property name="verticalGap" type="int" value="0"/>
+                      </Layout>
+                      <SubComponents>
+                        <Component class="javax.swing.JLabel" name="jlFormMassSolid">
+                          <Properties>
+                            <Property name="text" type="java.lang.String" value="Masa s&#xf3;lida f&#xf3;rm.:"/>
+                            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                              <Dimension value="[100, 23]"/>
+                            </Property>
+                          </Properties>
+                        </Component>
+                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompFormMassSolid">
+                          <Properties>
+                            <Property name="editable" type="boolean" value="false"/>
+                          </Properties>
+                        </Component>
+                      </SubComponents>
+                    </Container>
                     <Container class="javax.swing.JPanel" name="jPanel26">
 
                       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
@@ -445,7 +472,7 @@
                         <Property name="verticalGap" type="int" value="0"/>
                       </Layout>
                       <SubComponents>
-                        <Component class="javax.swing.JLabel" name="jlObjectiveBrix">
+                        <Component class="javax.swing.JLabel" name="jlTargetBrix">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="&#xb0;Bx meta f&#xf3;rm.:*"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -453,7 +480,7 @@
                             </Property>
                           </Properties>
                         </Component>
-                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompObjectiveBrix">
+                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompTargetBrix">
                         </Component>
                       </SubComponents>
                     </Container>
@@ -464,7 +491,7 @@
                         <Property name="verticalGap" type="int" value="0"/>
                       </Layout>
                       <SubComponents>
-                        <Component class="javax.swing.JLabel" name="jlObjectiveMass">
+                        <Component class="javax.swing.JLabel" name="jlTargetMass">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="Masa meta f&#xf3;rm.:"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -472,7 +499,7 @@
                             </Property>
                           </Properties>
                         </Component>
-                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompObjectiveMass">
+                        <Component class="sba.lib.gui.bean.DBeanCompoundField" name="moCompTargetMass">
                           <Properties>
                             <Property name="editable" type="boolean" value="false"/>
                           </Properties>
